--- a/Webstudy/templates/index.html
+++ b/Webstudy/templates/index.html
@@ -49,7 +49,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12 text-center">
-            <h1 class="mt-5 index-header">Welcome to WebSurvey</h1>
+            <h1 class="mt-5 page-header">Welcome to WebSurvey</h1>
         </div>
     </div>
 </div>
@@ -59,6 +59,13 @@
     <div class="card">
         <div class="card-header text-white">
             Participation information
+        </div>
+{#        <progress value="70" max="100">70 %</progress>#}
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="0"
+                 aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                <div class="progress-text" style="margin-left: 4px">0%</div>
+            </div>
         </div>
         <div class="card-body">
             <p class="card-text">
@@ -73,7 +80,7 @@
 
                 <b>Notes on data protection and participation information:</b><br>
                 <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="checkbox" autocomplete="off"> I have read and understood the information on data protection and the participation information and agree
+                    <input type="checkbox" class="form-check-input" id="checkbox" value="100" autocomplete="off"> I have read and understood the information on data protection and the participation information and agree
                 that my data may be used anonymously for scientific research purposes. <br>
                 </div>
 
@@ -104,11 +111,12 @@
 
 </footer>
 
-<script src="{% static 'js/script.js' %}"></script>
-
 <!-- Bootstrap core JavaScript -->
 <script src="{% static 'vendor/jquery/jquery.slim.min.js' %}"></script>
 <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+
+<script src="{% static 'js/script.js' %}"></script>
+
 </body>
 
 </html>
