Start DB & implement html

--- a/SinglePage/templates/index.html
+++ b/SinglePage/templates/index.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-lg-12 text-center">
             <h1 class="mt-5 page-header">Welcome to WebSurvey</h1>
-            <p>You have visited this page {{ page_nr }} time</p>
+{#            <p>You have visited this page {{ page_nr }} time</p>#}
         </div>
     </div>
 </div>
