--- a/SinglePage/templates/base.html
+++ b/SinglePage/templates/base.html
@@ -82,8 +82,13 @@
 <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
 
 <script type="text/javascript">
+    {#Save on which page we are#}
     let cardCounter = {{ page_nr }};
+    {#Save progressbar status#}
     let progressCounter = {{ progress }};
+    {#Save max nr of cards#}
+    let maxValue = {{ overall_count }} - 1;
+
 </script>
 <script src="{% static 'js/script.js' %}"></script>
 
