--- a/SinglePage/templates/index.html
+++ b/SinglePage/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+{% load static %}
 <!-- Page Content -->
 <div class="container">
     <div class="row">
@@ -39,11 +40,11 @@
         </div>
     </div>
 </div>
-{% for card in cards %}
-<div class="container" id="card{{ card.id }}" style="display: none;">
+{% for task in tasks %}
+<div class="container" id="card{{ forloop.counter }}" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
-            {{ card.title }}
+            {{ task.task_set.name }}
         </div>
         <div class="progress">
             <div class="progress-bar" role="progressbar" aria-valuenow="0"
@@ -53,9 +54,14 @@
         </div>
         <div class="card-body">
             <p class="card-text">
-                {{ card.text }}
+                {{ task.task_set.description }}
                 <br>
-                {{ card.image }}
+                <br>
+                {{ task.task_text }}
+                <br>
+                {% with 'img/'|add:task.image_link|add:'.png' as image_static %}
+                    <img src="{% static image_static %}" width="50" height="50" alt="">
+                {% endwith %}
             </p>
             <br>
             <div class="form-group">
@@ -69,7 +75,92 @@
     </div>
 </div>
 {% endfor %}
-<div class="container" id="card{{ card_count}}" style="display: none;">
+{#{% for q in questionnaires %}#}
+{#    {% for question in questions%}#}
+{#<div class="container" id="card{{ forloop.counter|add:task_count }}" style="display: none;">#}
+{#    <div class="card">#}
+{#        <div class="card-header text-white">#}
+{#            {{ question.questionnaire.name }}#}
+{#        </div>#}
+{#        <div class="progress">#}
+{#            <div class="progress-bar" role="progressbar" aria-valuenow="0"#}
+{#                 aria-valuemin="0" aria-valuemax="100" style="width:0%">#}
+{#                <div class="progress-text" style="margin-left: 4px">0%</div>#}
+{#            </div>#}
+{#        </div>#}
+{#        <div class="card-body">#}
+{#            <p class="card-text">#}
+{#                {{question}}#}
+{#            </p>#}
+{#            <br>#}
+{#            <div class="form-group">#}
+{#                <label for="textarea{{ card.id }}">Answer:</label>#}
+{#                <textarea class="form-control" id="textarea{{ card.id }}" rows="3" placeholder="Enter your answer"></textarea>#}
+{#            </div>#}
+{#        </div>#}
+{#        <div class="modal-footer" id="btn-next">#}
+{#            <a class="btn btn-next" onclick="displayCards(); fillProgress()"> Continue</a>#}
+{#        </div>#}
+{#    </div>#}
+{#</div>#}
+{#    {% endfor %}#}
+{#{% endfor %}#}
+<div class="container" id="card6" style="display: none;">
+    <div class="card">
+        {% include 'imi.html' %}
+    </div>
+</div>
+<div class="container" id="card7" style="display: none;">
+    <div class="card">
+        {% include 'pxi.html' %}
+    </div>
+</div>
+{% for task in tasks %}
+<div class="container" id="card{{ forloop.counter|add:"7" }}" style="display: none;">
+    <div class="card">
+        <div class="card-header text-white">
+            {{ task.task_set.name }}
+        </div>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="0"
+                 aria-valuemin="0" aria-valuemax="100" style="width:0%">
+                <div class="progress-text" style="margin-left: 4px">0%</div>
+            </div>
+        </div>
+        <div class="card-body">
+            <p class="card-text">
+                {{ task.task_set.description }}
+                <br>
+                <br>
+                {{ task.task_text }}
+                <br>
+                {% with 'img/'|add:task.image_link|add:'.png' as image_static %}
+                    <img src="{% static image_static %}" width="50" height="50" alt="">
+                {% endwith %}
+            </p>
+            <br>
+            <div class="form-group">
+                <label for="textarea{{ card.id }}">Answer:</label>
+                <textarea class="form-control" id="textarea{{ card.id }}" rows="3" placeholder="Enter your answer"></textarea>
+            </div>
+        </div>
+        <div class="modal-footer" id="btn-next">
+            <a class="btn btn-next" onclick="displayCards(); fillProgress()"> Continue</a>
+        </div>
+    </div>
+</div>
+{% endfor %}
+<div class="container" id="card13" style="display: none;">
+    <div class="card">
+        {% include 'imi.html' %}
+    </div>
+</div>
+<div class="container" id="card14" style="display: none;">
+    <div class="card">
+        {% include 'pxi.html' %}
+    </div>
+</div>
+<div class="container" id="card15" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
             End
