--- a/SinglePage/templates/imi.html
+++ b/SinglePage/templates/imi.html
@@ -9,10 +9,124 @@
 </div>
 <div class="card-body">
     <p class="card-text">
-        IMI
+        Intrinsic Motivation Inventory
     </p>
     <br>
-</div>
-<div class="modal-footer" id="btn-next">
-    <a class="btn btn-next" onclick="displayCards(); fillProgress()"> Continue</a>
+    <div class="wrap">
+        <label class="statement">This HTML Likert scale is easy to use.</label>
+                <ul class='likert'>
+            <li>
+                <input type="radio" name="scale0" value="strong_agree">
+                <label>Strongly agree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale0" value="agree">
+                <label>Agree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale0" value="neutral">
+                <label>Neutral</label>
+            </li>
+            <li>
+                <input type="radio" name="scale0" value="disagree">
+                <label>Disagree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale0" value="strong_disagree">
+                <label>Strongly disagree</label>
+            </li>
+        </ul>
+        <label class="statement">This HTML Likert scale is easy to use.</label>
+        <ul class='likert'>
+            <li>
+                <input type="radio" name="scale1" value="strong_agree">
+                <label>Strongly agree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale1" value="agree">
+                <label>Agree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale1" value="neutral">
+                <label>Neutral</label>
+            </li>
+            <li>
+                <input type="radio" name="scale1" value="disagree">
+                <label>Disagree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale1" value="strong_disagree">
+                <label>Strongly disagree</label>
+            </li>
+        </ul>
+        <label class="statement">It's clear that this is a responsive design.</label>
+        <ul class='likert'>
+            <li>
+                <input type="radio" name="scale2" value="strong_agree">
+                <label>Strongly agree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale2" value="agree">
+                <label>Agree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale2" value="neutral">
+                <label>Neutral</label>
+            </li>
+            <li>
+                <input type="radio" name="scale2" value="disagree">
+                <label>Disagree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale2" value="strong_disagree">
+                <label>Strongly disagree</label>
+            </li>
+        </ul>
+        <label class="statement">Codepen.io is an excellent tool for prototyping.</label>
+        <ul class='likert'>
+            <li>
+                <input type="radio" name="scale3" value="strong_agree">
+                <label>Strongly agree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale3" value="agree">
+                <label>Agree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale3" value="neutral">
+                <label>Neutral</label>
+            </li>
+            <li>
+                <input type="radio" name="scale3" value="disagree">
+                <label>Disagree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale3" value="strong_disagree">
+                <label>Strongly disagree</label>
+            </li>
+        </ul>
+        <label class="statement">Pete Fecteau is incredibly smart and handsome.</label>
+        <ul class='likert'>
+            <li>
+                <input type="radio" name="scale4" value="strong_agree">
+                <label>Strongly agree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale4" value="agree">
+                <label>Agree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale4" value="neutral">
+                <label>Neutral</label>
+            </li>
+            <li>
+                <input type="radio" name="scale4" value="disagree">
+                <label>Disagree</label>
+            </li>
+            <li>
+                <input type="radio" name="scale4" value="strong_disagree">
+                <label>Strongly disagree</label>
+            </li>
+        </ul>
+    </div>
 </div>
