--- a/SinglePage/templates/base.html
+++ b/SinglePage/templates/base.html
@@ -50,7 +50,7 @@
                         </button>
                       </div>
                       <div class="modal-body">
-                        Text
+                        {% include 'legal_notice.html' %}
                       </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
