--- a/SinglePage/templates/index.html
+++ b/SinglePage/templates/index.html
@@ -19,7 +19,11 @@
             <p class="card-text">
                 <b>Participation information</b><br>
                 Welcome to our survey!
+                <br>
 
+                It will take around 20 min.
+                <br>
+                <br>
                 Your data will be stored and processed anonymously only. More information on data protection can be
                 found in the data protection notes. This study is conducted by Julia Schulz as part of her master thesis
                 at DFKI (German Research Center for Artificial Intelligence) and UdS (Saarland University). For
@@ -40,7 +44,7 @@
         </div>
     </div>
 </div>
-{% for task in tasks %}
+{% for task in pre_tasks %}
 <div class="container" id="card{{ forloop.counter }}" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
@@ -75,47 +79,23 @@
     </div>
 </div>
 {% endfor %}
-{#{% for q in questionnaires %}#}
-{#    {% for question in questions%}#}
-{#<div class="container" id="card{{ forloop.counter|add:task_count }}" style="display: none;">#}
-{#    <div class="card">#}
-{#        <div class="card-header text-white">#}
-{#            {{ question.questionnaire.name }}#}
-{#        </div>#}
-{#        <div class="progress">#}
-{#            <div class="progress-bar" role="progressbar" aria-valuenow="0"#}
-{#                 aria-valuemin="0" aria-valuemax="100" style="width:0%">#}
-{#                <div class="progress-text" style="margin-left: 4px">0%</div>#}
-{#            </div>#}
-{#        </div>#}
-{#        <div class="card-body">#}
-{#            <p class="card-text">#}
-{#                {{question}}#}
-{#            </p>#}
-{#            <br>#}
-{#            <div class="form-group">#}
-{#                <label for="textarea{{ card.id }}">Answer:</label>#}
-{#                <textarea class="form-control" id="textarea{{ card.id }}" rows="3" placeholder="Enter your answer"></textarea>#}
-{#            </div>#}
-{#        </div>#}
-{#        <div class="modal-footer" id="btn-next">#}
-{#            <a class="btn btn-next" onclick="displayCards(); fillProgress()"> Continue</a>#}
-{#        </div>#}
-{#    </div>#}
-{#</div>#}
-{#    {% endfor %}#}
-{#{% endfor %}#}
 <div class="container" id="card6" style="display: none;">
     <div class="card">
         {% include 'imi.html' %}
+        <div class="modal-footer" id="btn-next">
+            <a class="btn btn-next" onclick="displayCards(); fillProgress(); saveIMI('pre');"> Continue</a>
+        </div>
     </div>
 </div>
 <div class="container" id="card7" style="display: none;">
     <div class="card">
         {% include 'pxi.html' %}
+        <div class="modal-footer" id="btn-next">
+            <a class="btn btn-next" onclick="displayCards(); fillProgress(); savePXI('pre');"> Continue</a>
+        </div>
     </div>
 </div>
-{% for task in tasks %}
+{% for task in main_tasks %}
 <div class="container" id="card{{ forloop.counter|add:"7" }}" style="display: none;">
     <div class="card">
         <div class="card-header text-white">
@@ -153,11 +133,17 @@
 <div class="container" id="card13" style="display: none;">
     <div class="card">
         {% include 'imi.html' %}
+        <div class="modal-footer" id="btn-next">
+            <a class="btn btn-next" onclick="displayCards(); fillProgress(); saveIMI('main');"> Continue</a>
+        </div>
     </div>
 </div>
 <div class="container" id="card14" style="display: none;">
     <div class="card">
         {% include 'pxi.html' %}
+        <div class="modal-footer" id="btn-next">
+            <a class="btn btn-next" onclick="displayCards(); fillProgress(); savePXI('main');"> Continue</a>
+        </div>
     </div>
 </div>
 <div class="container" id="card15" style="display: none;">
@@ -173,7 +159,7 @@
         </div>
         <div class="card-body">
             <p class="card-text">
-                Thank you for your participation
+                Thank you for your participation!
             </p>
             <br>
         </div>
